# research-topic

./: .gitignore  README.md  TROUBLESHOOTING.md  config.py  graph_nodes.py  graph_state.py  graph_workflow.py  main.py  pyproject.toml  requirements.txt  utils.py
agents/: __init__.py  base_agent.py  orchestrator_agent.py  report_agent.py  similarity_agent.py  summarization_agent.py  web_crawler_agent.py
inputs/: keywords.txt  urls.txt  urls_example_crawlable.txt
