[project]
name = "research-topic"
version = "0.1.0"
description = "Multi-Agent Research System using LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "openai>=2.7.2",
    "dotenv>=0.9.9",
    "langchain-openai>=1.0.2",
]

[project.optional-dependencies]
transformer = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
llm = [
    "openai>=1.0.0",
]
all = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "openai>=1.0.0",
]
